generator client {
  provider = "prisma-client"
  output   = "../lib/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model user {
  id            String   @id
  name          String
  email         String   @unique
  emailVerified Boolean
  image         String?
  createdAt     DateTime
  updatedAt     DateTime
  address       String?
  phoneNumber   String?

  saldo_koin Int    @default(0)
  status     String @default("active")
  role       String @default("user")

  sessions session[]
  accounts account[]

  dinas            Dinas[]
  petugas          Petugas[]
  laporan          Laporan[]
  notifikasi       Notifikasi[]
  transaksi_koin   TransaksiKoin[]
  kopdes           Kopdes[]
  penukaran        Penukaran[]
  coin_transaction CoinTransaction[]

  isBanned      Boolean        @default(false)
  bannedReasons BannedReason[]

  @@map("user")
}

model BannedReason {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String
  alasan    String
  createdAt DateTime @default(now())
  user      user     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("banned_reason")
}

model session {
  id        String   @id
  expiresAt DateTime
  token     String   @unique
  createdAt DateTime
  updatedAt DateTime
  ipAddress String?
  userAgent String?
  userId    String
  user      user     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("session")
}

model account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime
  updatedAt             DateTime
  user                  user      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("account")
}

model verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime
  updatedAt  DateTime

  @@map("verification")
}

model Dinas {
  id         String @id @default(uuid()) @db.Uuid
  user_id    String
  nama_dinas String
  kontak     String

  user                     user                    @relation(fields: [user_id], references: [id], onDelete: Cascade)
  petugas                  Petugas[]
  area_cakupan             AreaCakupan[]
  kendaraan                Kendaraan[]
  laporan                  Laporan[]
  portal_state             DlhPortalState?
  media                    DlhMedia[]
  auto_collective_requests AutoCollectiveRequest[]
  dispatch_routes          DispatchRoute[]

  @@map("DINAS")
}

model DlhPortalState {
  id        String   @id @default(uuid()) @db.Uuid
  dinas_id  String   @unique @db.Uuid
  data      Json
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  dinas Dinas @relation(fields: [dinas_id], references: [id], onDelete: Cascade)

  @@map("DLH_PORTAL_STATE")
}

model DlhMedia {
  id          String   @id @default(uuid()) @db.Uuid
  dinas_id    String   @db.Uuid
  uploaded_by String
  kind        String   @default("profile")
  mime_type   String
  size_bytes  Int
  data        Bytes
  createdAt   DateTime @default(now())

  dinas Dinas @relation(fields: [dinas_id], references: [id], onDelete: Cascade)

  @@index([dinas_id, kind])
  @@map("DLH_MEDIA")
}

model Petugas {
  id             String          @id @default(uuid()) @db.Uuid
  dinas_id       String          @db.Uuid
  user_id        String
  nama           String
  no_hp          String
  laporan        Laporan[]
  dispatch_routes DispatchRoute[]
  dinas          Dinas           @relation(fields: [dinas_id], references: [id], onDelete: Cascade)
  user           user            @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@map("PETUGAS")
}

model AreaCakupan {
  id           String @id @default(uuid()) @db.Uuid
  dinas_id     String @db.Uuid
  nama_wilayah String
  dinas        Dinas  @relation(fields: [dinas_id], references: [id], onDelete: Cascade)

  @@map("AREA_CAKUPAN")
}

model Kendaraan {
  id              String          @id @default(uuid()) @db.Uuid
  dinas_id        String          @db.Uuid
  jenis           String
  kapasitas       Int
  current_load    Int
  dinas           Dinas           @relation(fields: [dinas_id], references: [id], onDelete: Cascade)
  laporan         Laporan[]
  dispatch_routes DispatchRoute[]

  @@map("KENDARAAN")
}

model Laporan {
  id                    String        @id @default(uuid()) @db.Uuid
  user_id               String
  dinas_id              String?       @db.Uuid
  petugas_id            String?       @db.Uuid
  kendaraan_id          String?       @db.Uuid
  foto_url              String
  lokasi_lat            Float
  lokasi_lng            Float
  kategori_ukuran       String
  rekomendasi_kendaraan String?
  status                LaporanStatus
  createdAt             DateTime      @default(now())
  updatedAt             DateTime      @updatedAt

  // Correction oleh petugas/dinas terhadap hasil AI
  corrected_kategori_ukuran         String?   @map("corrected_kategori_ukuran")
  corrected_drainage_risk           Boolean?  @map("corrected_drainage_risk")
  corrected_access_obstruction_risk Boolean?  @map("corrected_access_obstruction_risk")
  corrected_by                      String?   @map("corrected_by")
  corrected_at                      DateTime? @map("corrected_at")
  correction_reason                 String?   @map("correction_reason")

  // Location enhancement
  lokasi_accuracy      Float?    @map("lokasi_accuracy")
  lokasi_confirmed_lat Float?    @map("lokasi_confirmed_lat")
  lokasi_confirmed_lng Float?    @map("lokasi_confirmed_lng")
  lokasi_device_lat    Float?    @map("lokasi_device_lat")
  lokasi_device_lng    Float?    @map("lokasi_device_lng")
  lokasi_captured_at   DateTime? @map("lokasi_captured_at")
  lokasi_exif_lat      Float?    @map("lokasi_exif_lat")
  lokasi_exif_lng      Float?    @map("lokasi_exif_lng")
  risk_flags           String[]  @default([])

  // Reverse-geocoded address
  address_text String? @map("address_text")
  road_name    String? @map("road_name")
  district     String? @map("district")
  city         String? @map("city")
  province     String? @map("province")
  country      String? @map("country")

  // Photo metadata
  photo_hash       String? @map("photo_hash")
  photo_mime_type  String? @map("photo_mime_type")
  photo_size_bytes Int?    @map("photo_size_bytes")

  // Analysis
  waste_types             String[]  @default([])
  drainage_risk           Boolean?  @default(false) @map("drainage_risk")
  access_obstruction_risk Boolean?  @default(false) @map("access_obstruction_risk")
  visual_indicators       String[]  @default([]) @map("visual_indicators")
  confidence              Float?
  needs_manual_review     Boolean?  @default(false) @map("needs_manual_review")
  analysis_provider       String?   @map("analysis_provider")
  analysed_at             DateTime? @map("analysed_at")

  // Priority
  priority_score          Float?  @map("priority_score")
  priority_level          String? @map("priority_level")
  priority_weight_version String? @map("priority_weight_version")

  // Idempotency & load
  client_request_id   String? @unique @map("client_request_id")
  estimated_load_unit Int?    @map("estimated_load_unit")

  // Assignment load tracking
  assigned_load_kg Int?      @map("assigned_load_kg")
  load_released_at DateTime? @map("load_released_at")

  // Dispatch routing
  route_order Int?
  route_id    String? @db.Uuid @map("route_id")

  user              user               @relation(fields: [user_id], references: [id])
  dinas             Dinas?             @relation(fields: [dinas_id], references: [id])
  petugas           Petugas?           @relation(fields: [petugas_id], references: [id])
  kendaraan         Kendaraan?         @relation(fields: [kendaraan_id], references: [id])
  dispatch_route    DispatchRoute?     @relation(fields: [route_id], references: [id], onDelete: SetNull)
  foto              Foto[]
  transaksi_koin    TransaksiKoin[]
  verifikasi_pickup VerifikasiPickup[]
  notifikasi        Notifikasi[]

  @@index([route_id])
  @@map("LAPORAN")
}

model Foto {
  id         String  @id @default(uuid()) @db.Uuid
  laporan_id String  @db.Uuid
  url        String
  hash       String?
  mime_type  String? @map("mime_type")
  size_bytes Int?    @map("size_bytes")
  laporan    Laporan @relation(fields: [laporan_id], references: [id], onDelete: Cascade)

  @@map("FOTO")
}

model TransaksiKoin {
  id         String @id @default(uuid()) @db.Uuid
  user_id    String
  laporan_id String @db.Uuid
  jumlah     Int
  jenis      String
  metadata   Json?

  user    user    @relation(fields: [user_id], references: [id], onDelete: Cascade)
  laporan Laporan @relation(fields: [laporan_id], references: [id], onDelete: Cascade)

  @@unique([laporan_id, jenis], name: "laporan_id_jenis", map: "uq_reward_laporan_jenis")
  @@map("TRANSAKSI_KOIN")
}

model VerifikasiPickup {
  id           String   @id @default(uuid()) @db.Uuid
  laporan_id   String   @db.Uuid
  foto_sebelum String
  foto_sesudah String
  waktu        DateTime @default(now())
  laporan      Laporan  @relation(fields: [laporan_id], references: [id], onDelete: Cascade)

  @@map("VERIFIKASI_PICKUP")
}

model Notifikasi {
  id          String  @id @default(uuid()) @db.Uuid
  user_id     String
  laporan_id  String  @db.Uuid
  pesan       String
  status_baca Boolean @default(false)
  laporan     Laporan @relation(fields: [laporan_id], references: [id], onDelete: Cascade)
  user        user    @relation(fields: [user_id], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())

  @@map("NOTIFIKASI")
}

model Kopdes {
  id       String  @id @default(uuid()) @db.Uuid
  user_id  String
  nama     String
  alamat   String
  isActive Boolean @default(true) @map("is_active")

  user      user        @relation(fields: [user_id], references: [id], onDelete: Cascade)
  produk    Produk[]
  penukaran Penukaran[]

  @@map("KOPDES")
}

model Produk {
  id          String   @id @default(uuid()) @db.Uuid
  kopdes_id   String   @db.Uuid
  nama_barang String
  harga_koin  Int
  stok        Int
  isActive    Boolean  @default(true) @map("is_active")
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  kopdes    Kopdes      @relation(fields: [kopdes_id], references: [id], onDelete: Cascade)
  penukaran Penukaran[]

  @@map("PRODUK")
}

enum LaporanStatus {
  ANALYZED
  WAITING
  PENDING
  DIJEMPUT
  SELESAI
  DITOLAK

  @@map("LAPORAN_STATUS")
}

enum RouteStatus {
  DRAFT
  CONFIRMED
  IN_PROGRESS
  COMPLETED
  CANCELLED

  @@map("ROUTE_STATUS")
}

model DispatchRoute {
  id                         String      @id @default(uuid()) @db.Uuid
  dinas_id                   String      @db.Uuid
  petugas_id                 String      @db.Uuid
  kendaraan_id               String      @db.Uuid
  status                     RouteStatus @default(CONFIRMED)
  estimated_distance_km      Float?      @map("estimated_distance_km")
  estimated_duration_minutes Int?        @map("estimated_duration_minutes")
  total_load_kg              Int         @default(0) @map("total_load_kg")
  route_geometry             Json?       @map("route_geometry")
  routing_source             String?     @map("routing_source")
  created_at                 DateTime    @default(now()) @map("created_at")
  updated_at                 DateTime    @updatedAt @map("updated_at")

  dinas      Dinas     @relation(fields: [dinas_id], references: [id], onDelete: Cascade)
  petugas    Petugas   @relation(fields: [petugas_id], references: [id], onDelete: Restrict)
  kendaraan  Kendaraan @relation(fields: [kendaraan_id], references: [id], onDelete: Restrict)
  laporan    Laporan[]

  @@index([dinas_id, status])
  @@index([kendaraan_id, status])
  @@index([petugas_id, status])
  @@map("DISPATCH_ROUTE")
}

enum RedemptionStatus {
  PENDING
  REDEEMED
  EXPIRED
  CANCELLED

  @@map("REDEMPTION_STATUS")
}

enum CoinTransactionType {
  REWARD
  REDEMPTION_RESERVE
  REDEMPTION_REFUND
  ADMIN_ADJUSTMENT

  @@map("COIN_TRANSACTION_TYPE")
}

model Penukaran {
  id                  String           @id @default(uuid()) @db.Uuid
  user_id             String
  produk_id           String           @db.Uuid
  kopdes_id           String           @db.Uuid
  quantity            Int              @default(1)
  unit_coin_price     Int
  jumlah_koin         Int
  status              RedemptionStatus @default(PENDING)
  token_hash          String?          @unique
  token_hint          String?
  qr_payload          String?
  idempotency_key     String?
  expires_at          DateTime
  redeemed_at         DateTime?
  cancelled_at        DateTime?
  expired_at          DateTime?
  redeemed_by_user_id String?
  cancellation_reason String?
  createdAt           DateTime         @default(now())
  updatedAt           DateTime         @updatedAt

  user             user              @relation(fields: [user_id], references: [id])
  produk           Produk            @relation(fields: [produk_id], references: [id])
  kopdes           Kopdes            @relation(fields: [kopdes_id], references: [id])
  coin_transaction CoinTransaction[]

  @@unique([user_id, idempotency_key])
  @@index([user_id, status])
  @@index([kopdes_id, status])
  @@index([expires_at, status])
  @@map("PENUKARAN")
}

model CoinTransaction {
  id             String              @id @default(uuid()) @db.Uuid
  user_id        String
  redemption_id  String?             @db.Uuid
  type           CoinTransactionType
  amount         Int
  balance_before Int
  balance_after  Int
  description    String?
  created_at     DateTime            @default(now())

  user      user       @relation(fields: [user_id], references: [id])
  penukaran Penukaran? @relation(fields: [redemption_id], references: [id])

  @@index([user_id, created_at])
  @@index([redemption_id])
  @@map("COIN_TRANSACTION")
}

enum TemporaryUploadStatus {
  ACTIVE
  USED
  EXPIRED

  @@map("TEMPORARY_UPLOAD_STATUS")
}

model TemporaryUpload {
  id            String                @id @default(uuid()) @db.Uuid
  user_id       String
  provider      String                @default("cloudinary")
  public_id     String
  secure_url    String
  resource_type String                @default("image")
  mime_type     String
  size_bytes    Int
  status        TemporaryUploadStatus @default(ACTIVE)
  createdAt     DateTime              @default(now())
  expiresAt     DateTime
  usedAt        DateTime?

  @@map("TEMPORARY_UPLOAD")
}

model AutoCollectiveRequest {
  id              String   @id @default(uuid()) @db.Uuid
  dinas_id        String   @db.Uuid
  idempotency_key String
  request_hash    String
  response_data   Json?
  created_at      DateTime @default(now())

  dinas Dinas @relation(fields: [dinas_id], references: [id], onDelete: Cascade)

  @@unique([dinas_id, idempotency_key])
  @@index([dinas_id, created_at])
  @@map("AUTO_COLLECTIVE_REQUEST")
}
